--- a/boost_dll/tutorial.html
+++ b/boost_dll/tutorial.html
@@ -153,13 +153,13 @@ Destructing my_plugin_sum ;o)
       </p>
 <div class="itemizedlist"><ul class="itemizedlist" type="disc">
 <li class="listitem">
-            <a href="https://raw.githubusercontent.com/boostorg/dll/develop/example/tutorial_common/my_plugin_api.hpp" target="_top">example/tutorial_common/my_plugin_api.hpp</a>
+            <a href="https://github.com/apolukhin/Boost.DLL/blob/develop/example/tutorial_common/my_plugin_api.hpp" target="_top">example/tutorial_common/my_plugin_api.hpp</a>
           </li>
 <li class="listitem">
-            <a href="https://raw.githubusercontent.com/boostorg/dll/develop/example/tutorial1/my_plugin_sum.cpp" target="_top">example/tutorial1/my_plugin_sum.cpp</a>
+            <a href="https://github.com/apolukhin/Boost.DLL/blob/develop/example/tutorial1/my_plugin_sum.cpp" target="_top">example/tutorial1/my_plugin_sum.cpp</a>
           </li>
 <li class="listitem">
-            <a href="https://raw.githubusercontent.com/boostorg/dll/develop/example/tutorial1/tutorial1.cpp" target="_top">example/tutorial1/tutorial1.cpp</a>
+            <a href="https://github.com/apolukhin/Boost.DLL/blob/develop/example/tutorial1/tutorial1.cpp" target="_top">example/tutorial1/tutorial1.cpp</a>
           </li>
 </ul></div>
 <p>
@@ -276,10 +276,10 @@ Plugin Name:  aggregator
       </p>
 <div class="itemizedlist"><ul class="itemizedlist" type="disc">
 <li class="listitem">
-            <a href="https://raw.githubusercontent.com/boostorg/dll/develop/example/tutorial2/my_plugin_aggregator.cpp" target="_top">example/tutorial2/my_plugin_aggregator.cpp</a>
+            <a href="https://github.com/apolukhin/Boost.DLL/blob/develop/example/tutorial2/my_plugin_aggregator.cpp" target="_top">example/tutorial2/my_plugin_aggregator.cpp</a>
           </li>
 <li class="listitem">
-            <a href="https://raw.githubusercontent.com/boostorg/dll/develop/example/tutorial2/tutorial2.cpp" target="_top">example/tutorial2/tutorial2.cpp</a>
+            <a href="https://github.com/apolukhin/Boost.DLL/blob/develop/example/tutorial2/tutorial2.cpp" target="_top">example/tutorial2/tutorial2.cpp</a>
           </li>
 </ul></div>
 <p>
@@ -346,13 +346,13 @@ Destructing my_plugin_sum ;o)
       </p>
 <div class="itemizedlist"><ul class="itemizedlist" type="disc">
 <li class="listitem">
-            <a href="https://raw.githubusercontent.com/boostorg/dll/develop/example/tutorial3/tutorial3.cpp" target="_top">example/tutorial3/tutorial3.cpp</a>
+            <a href="https://github.com/apolukhin/Boost.DLL/blob/develop/example/tutorial3/tutorial3.cpp" target="_top">example/tutorial3/tutorial3.cpp</a>
           </li>
 <li class="listitem">
-            <a href="https://raw.githubusercontent.com/boostorg/dll/develop/example/tutorial2/my_plugin_aggregator.cpp" target="_top">example/tutorial2/my_plugin_aggregator.cpp</a>
+            <a href="https://github.com/apolukhin/Boost.DLL/blob/develop/example/tutorial2/my_plugin_aggregator.cpp" target="_top">example/tutorial2/my_plugin_aggregator.cpp</a>
           </li>
 <li class="listitem">
-            <a href="https://raw.githubusercontent.com/boostorg/dll/develop/example/tutorial1/my_plugin_sum.cpp" target="_top">example/tutorial1/my_plugin_sum.cpp</a>
+            <a href="https://github.com/apolukhin/Boost.DLL/blob/develop/example/tutorial1/my_plugin_sum.cpp" target="_top">example/tutorial1/my_plugin_sum.cpp</a>
           </li>
 </ul></div>
 <p>
@@ -506,13 +506,13 @@ Destructing my_plugin_static
       </p>
 <div class="itemizedlist"><ul class="itemizedlist" type="disc">
 <li class="listitem">
-            <a href="https://raw.githubusercontent.com/boostorg/dll/develop/example/tutorial4/static_plugin.hpp" target="_top">example/tutorial4/static_plugin.hpp</a>
+            <a href="https://github.com/apolukhin/Boost.DLL/blob/develop/example/tutorial4/static_plugin.hpp" target="_top">example/tutorial4/static_plugin.hpp</a>
           </li>
 <li class="listitem">
-            <a href="https://raw.githubusercontent.com/boostorg/dll/develop/example/tutorial4/static_plugin.cpp" target="_top">example/tutorial4/static_plugin.cpp</a>
+            <a href="https://github.com/apolukhin/Boost.DLL/blob/develop/example/tutorial4/static_plugin.cpp" target="_top">example/tutorial4/static_plugin.cpp</a>
           </li>
 <li class="listitem">
-            <a href="https://raw.githubusercontent.com/boostorg/dll/develop/example/tutorial4/load_self.cpp" target="_top">example/tutorial4/load_self.cpp</a>
+            <a href="https://github.com/apolukhin/Boost.DLL/blob/develop/example/tutorial4/load_self.cpp" target="_top">example/tutorial4/load_self.cpp</a>
           </li>
 </ul></div>
 <p>
@@ -629,16 +629,16 @@ Destructing my_plugin_sum ;o)
       </p>
 <div class="itemizedlist"><ul class="itemizedlist" type="disc">
 <li class="listitem">
-            <a href="https://raw.githubusercontent.com/boostorg/dll/develop/example/tutorial5/load_all.cpp" target="_top">example/tutorial5/load_all.cpp</a>
+            <a href="https://github.com/apolukhin/Boost.DLL/blob/develop/example/tutorial5/load_all.cpp" target="_top">example/tutorial5/load_all.cpp</a>
           </li>
 <li class="listitem">
-            <a href="https://raw.githubusercontent.com/boostorg/dll/develop/example/tutorial4/static_plugin.cpp" target="_top">example/tutorial4/static_plugin.cpp</a>
+            <a href="https://github.com/apolukhin/Boost.DLL/blob/develop/example/tutorial4/static_plugin.cpp" target="_top">example/tutorial4/static_plugin.cpp</a>
           </li>
 <li class="listitem">
-            <a href="https://raw.githubusercontent.com/boostorg/dll/develop/example/tutorial2/my_plugin_aggregator.cpp" target="_top">example/tutorial2/my_plugin_aggregator.cpp</a>
+            <a href="https://github.com/apolukhin/Boost.DLL/blob/develop/example/tutorial2/my_plugin_aggregator.cpp" target="_top">example/tutorial2/my_plugin_aggregator.cpp</a>
           </li>
 <li class="listitem">
-            <a href="https://raw.githubusercontent.com/boostorg/dll/develop/example/tutorial1/my_plugin_sum.cpp" target="_top">example/tutorial1/my_plugin_sum.cpp</a>
+            <a href="https://github.com/apolukhin/Boost.DLL/blob/develop/example/tutorial1/my_plugin_sum.cpp" target="_top">example/tutorial1/my_plugin_sum.cpp</a>
           </li>
 </ul></div>
 <p>
@@ -747,10 +747,10 @@ After library unload.
       </p>
 <div class="itemizedlist"><ul class="itemizedlist" type="disc">
 <li class="listitem">
-            <a href="https://raw.githubusercontent.com/boostorg/dll/develop/example/tutorial6/on_unload_lib.cpp" target="_top">example/tutorial6/on_unload_lib.cpp</a>
+            <a href="https://github.com/apolukhin/Boost.DLL/blob/develop/example/tutorial6/on_unload_lib.cpp" target="_top">example/tutorial6/on_unload_lib.cpp</a>
           </li>
 <li class="listitem">
-            <a href="https://raw.githubusercontent.com/boostorg/dll/develop/example/tutorial6/tutorial6.cpp" target="_top">example/tutorial6/tutorial6.cpp</a>
+            <a href="https://github.com/apolukhin/Boost.DLL/blob/develop/example/tutorial6/tutorial6.cpp" target="_top">example/tutorial6/tutorial6.cpp</a>
           </li>
 </ul></div>
 <p>
@@ -866,13 +866,13 @@ Function 'howdy' prints:
       </p>
 <div class="itemizedlist"><ul class="itemizedlist" type="disc">
 <li class="listitem">
-            <a href="https://raw.githubusercontent.com/boostorg/dll/develop/example/tutorial7/library1.cpp" target="_top">example/tutorial7/library1.cpp</a>
+            <a href="https://github.com/apolukhin/Boost.DLL/blob/develop/example/tutorial7/library1.cpp" target="_top">example/tutorial7/library1.cpp</a>
           </li>
 <li class="listitem">
-            <a href="https://raw.githubusercontent.com/boostorg/dll/develop/example/tutorial7/library2.cpp" target="_top">example/tutorial7/library2.cpp</a>
+            <a href="https://github.com/apolukhin/Boost.DLL/blob/develop/example/tutorial7/library2.cpp" target="_top">example/tutorial7/library2.cpp</a>
           </li>
 <li class="listitem">
-            <a href="https://raw.githubusercontent.com/boostorg/dll/develop/example/tutorial7/tutorial7.cpp" target="_top">example/tutorial7/tutorial7.cpp</a>
+            <a href="https://github.com/apolukhin/Boost.DLL/blob/develop/example/tutorial7/tutorial7.cpp" target="_top">example/tutorial7/tutorial7.cpp</a>
           </li>
 </ul></div>
 <p>
@@ -1123,19 +1123,19 @@ location: "/tutorial8_static"</pre>
       </p>
 <div class="itemizedlist"><ul class="itemizedlist" type="disc">
 <li class="listitem">
-            <a href="https://raw.githubusercontent.com/boostorg/dll/develop/example/tutorial8/refcounting_api.hpp" target="_top">example/tutorial8/refcounting_api.hpp</a>
+            <a href="https://github.com/apolukhin/Boost.DLL/blob/develop/example/tutorial8/refcounting_api.hpp" target="_top">example/tutorial8/refcounting_api.hpp</a>
           </li>
 <li class="listitem">
-            <a href="https://raw.githubusercontent.com/boostorg/dll/develop/example/tutorial8/refcounting_plugin.hpp" target="_top">example/tutorial8/refcounting_plugin.hpp</a>
+            <a href="https://github.com/apolukhin/Boost.DLL/blob/develop/example/tutorial8/refcounting_plugin.hpp" target="_top">example/tutorial8/refcounting_plugin.hpp</a>
           </li>
 <li class="listitem">
-            <a href="https://raw.githubusercontent.com/boostorg/dll/develop/example/tutorial8/refcounting_plugin.cpp" target="_top">example/tutorial8/refcounting_plugin.cpp</a>
+            <a href="https://github.com/apolukhin/Boost.DLL/blob/develop/example/tutorial8/refcounting_plugin.cpp" target="_top">example/tutorial8/refcounting_plugin.cpp</a>
           </li>
 <li class="listitem">
-            <a href="https://raw.githubusercontent.com/boostorg/dll/develop/example/tutorial8/tutorial8.cpp" target="_top">example/tutorial8/tutorial8.cpp</a>
+            <a href="https://github.com/apolukhin/Boost.DLL/blob/develop/example/tutorial8/tutorial8.cpp" target="_top">example/tutorial8/tutorial8.cpp</a>
           </li>
 <li class="listitem">
-            <a href="https://raw.githubusercontent.com/boostorg/dll/develop/example/tutorial8/tutorial8_static.cpp" target="_top">example/tutorial8/tutorial8_static.cpp</a>
+            <a href="https://github.com/apolukhin/Boost.DLL/blob/develop/example/tutorial8/tutorial8_static.cpp" target="_top">example/tutorial8/tutorial8_static.cpp</a>
           </li>
 </ul></div>
 <p>
@@ -1179,7 +1179,7 @@ location: "/tutorial8_static"</pre>
         <span class="bold"><strong>Full sources:</strong></span>
       </p>
 <div class="itemizedlist"><ul class="itemizedlist" type="disc"><li class="listitem">
-            <a href="https://raw.githubusercontent.com/boostorg/dll/develop/example/tutorial9/tutorial9.cpp" target="_top">example/tutorial9/tutorial9.cpp</a>
+            <a href="https://github.com/apolukhin/Boost.DLL/blob/develop/example/tutorial9/tutorial9.cpp" target="_top">example/tutorial9/tutorial9.cpp</a>
           </li></ul></div>
 <p>
         <a class="link" href="tutorial.html" title="Tutorial">Back to the Top</a>
