--- a/index.html
+++ b/index.html
@@ -68,7 +68,14 @@
 <dt><span class="section"><a href="boost_dll/reference.html#shared_library_refcountable_reference">Shared Library Refcountable Reference</a></span></dt>
 </dl></dd>
 <dt><span class="section"><a href="boost_dll/limitations.html">Limitations</a></span></dt>
-<dd><dl><dt><span class="section"><a href="boost_dll/limitations.html#boost_dll.limitations.mingw">MinGW</a></span></dt></dl></dd>
+<dd><dl>
+<dt><span class="section"><a href="boost_dll/limitations.html#boost_dll.limitations.exporting_weak_symbols__fails_on_mingw__android_">Exporting
+      weak symbols (Fails on MinGW, Android)</a></span></dt>
+<dt><span class="section"><a href="boost_dll/limitations.html#boost_dll.limitations.user_defined_section_names__fails_on_sunos___oracle_solaris_studio_compilers_">User
+      defined section names (Fails on SunOS + Oracle Solaris Studio Compilers)</a></span></dt>
+<dt><span class="section"><a href="boost_dll/limitations.html#boost_dll.limitations.multithread">Thread safe library
+      loading (Fails on MacOS, iOS and some other)</a></span></dt>
+</dl></dd>
 <dt><span class="section"><a href="boost_dll/f_a_q_.html">F.A.Q.</a></span></dt>
 <dt><span class="section"><a href="boost_dll/design_rationale.html">Design Rationale</a></span></dt>
 <dd><dl>
@@ -125,7 +132,7 @@
 </div>
 </div>
 <table xmlns:rev="http://www.cs.rpi.edu/~gregod/boost/tools/doc/revision" width="100%"><tr>
-<td align="left"><p><small>Last revised: December 08, 2015 at 21:11:54 GMT</small></p></td>
+<td align="left"><p><small>Last revised: December 10, 2015 at 18:55:34 GMT</small></p></td>
 <td align="right"><div class="copyright-footer"></div></td>
 </tr></table>
 <hr>
