--- a/boost_dll/introduction0.html
+++ b/boost_dll/introduction0.html
@@ -224,9 +224,9 @@
 </table>
 </div>
 <p>
-      In all the cases above it is safe to use imported variable or function because
-      the <code class="computeroutput"><span class="identifier">boost</span><span class="special">::</span><span class="identifier">function</span></code> or <code class="computeroutput"><span class="identifier">boost</span><span class="special">::</span><span class="identifier">shared_ptr</span></code>
-      internally hold a reference to shared library.
+      It is safe to use imported variable or function because the variables returned
+      from <code class="computeroutput"><span class="identifier">import</span><span class="special">*</span></code>
+      functions internally hold a reference to the shared library.
     </p>
 <p>
       <code class="computeroutput">BOOST_SYMBOL_EXPORT</code> is just
