--- a/boost_dll/limitations.html
+++ b/boost_dll/limitations.html
@@ -26,7 +26,14 @@
 <div class="titlepage"><div><div><h2 class="title" style="clear: both">
 <a name="boost_dll.limitations"></a><a class="link" href="limitations.html" title="Limitations">Limitations</a>
 </h2></div></div></div>
-<div class="toc"><dl><dt><span class="section"><a href="limitations.html#boost_dll.limitations.mingw">MinGW</a></span></dt></dl></div>
+<div class="toc"><dl>
+<dt><span class="section"><a href="limitations.html#boost_dll.limitations.exporting_weak_symbols__fails_on_mingw__android_">Exporting
+      weak symbols (Fails on MinGW, Android)</a></span></dt>
+<dt><span class="section"><a href="limitations.html#boost_dll.limitations.user_defined_section_names__fails_on_sunos___oracle_solaris_studio_compilers_">User
+      defined section names (Fails on SunOS + Oracle Solaris Studio Compilers)</a></span></dt>
+<dt><span class="section"><a href="limitations.html#boost_dll.limitations.multithread">Thread safe library
+      loading (Fails on MacOS, iOS and some other)</a></span></dt>
+</dl></div>
 <p>
       Some platforms and compilers do not provide all the required functionality
       to have a fully functional Boost.DLL. Such compilers are mentioned in this
@@ -34,16 +41,18 @@
     </p>
 <div class="section">
 <div class="titlepage"><div><div><h3 class="title">
-<a name="boost_dll.limitations.mingw"></a><a class="link" href="limitations.html#boost_dll.limitations.mingw" title="MinGW">MinGW</a>
+<a name="boost_dll.limitations.exporting_weak_symbols__fails_on_mingw__android_"></a><a class="link" href="limitations.html#boost_dll.limitations.exporting_weak_symbols__fails_on_mingw__android_" title="Exporting weak symbols (Fails on MinGW, Android)">Exporting
+      weak symbols (Fails on MinGW, Android)</a>
 </h3></div></div></div>
 <p>
-        <code class="computeroutput"><span class="identifier">MinGW</span></code> and <code class="computeroutput"><span class="identifier">ld</span></code>
-        on Windows platform fail to mix <code class="computeroutput"><span class="identifier">__dllexport__</span></code>
+        Some versions of Android, <code class="computeroutput"><span class="identifier">MinGW</span></code>
+        and <code class="computeroutput"><span class="identifier">ld</span></code> on Windows platform
+        fail to mix <code class="computeroutput"><span class="identifier">__dllexport__</span></code>
         and <code class="computeroutput"><span class="identifier">weak</span></code> attributes. This
         leads us to situation, where we must explicitly specify translation unit
         in which <code class="computeroutput"><a class="link" href="../BOOST_DLL_ALIAS.html" title="Macro BOOST_DLL_ALIAS">BOOST_DLL_ALIAS</a></code> is
         instantiated, making all other <code class="computeroutput"><a class="link" href="../BOOST_DLL_ALIAS.html" title="Macro BOOST_DLL_ALIAS">BOOST_DLL_ALIAS</a></code>
-        declaration with that alias name an <code class="computeroutput"><span class="keyword">extern</span></code>
+        declarations with that alias name an <code class="computeroutput"><span class="keyword">extern</span></code>
         variable.
       </p>
 <p>
@@ -52,7 +61,47 @@
         before including any of the Boost.DLL library headers.
       </p>
 <p>
-        See source code of tutorials for usage example.
+        You may explicitly disable export of weak symbols using <code class="computeroutput"><a class="link" href="../BOOST_DLL_FORCE_NO_WEAK_EXPORTS.html" title="Macro BOOST_DLL_FORCE_NO_WEAK_EXPORTS">BOOST_DLL_FORCE_NO_WEAK_EXPORTS</a></code>.
+        This may be usefull for working around linker problems or to test your program
+        for compatability with linkers that do not support exporting weak symbols.
+      </p>
+</div>
+<div class="section">
+<div class="titlepage"><div><div><h3 class="title">
+<a name="boost_dll.limitations.user_defined_section_names__fails_on_sunos___oracle_solaris_studio_compilers_"></a><a class="link" href="limitations.html#boost_dll.limitations.user_defined_section_names__fails_on_sunos___oracle_solaris_studio_compilers_" title="User defined section names (Fails on SunOS + Oracle Solaris Studio Compilers)">User
+      defined section names (Fails on SunOS + Oracle Solaris Studio Compilers)</a>
+</h3></div></div></div>
+<p>
+        Some platforms ignore section attributes, so that querying for a symbols
+        in a specified section using <code class="computeroutput"><a class="link" href="../boost/dll/library_info.html" title="Class library_info">boost::dll::library_info</a></code>
+        may return nothing.
+      </p>
+</div>
+<div class="section">
+<div class="titlepage"><div><div><h3 class="title">
+<a name="boost_dll.limitations.multithread"></a><a class="link" href="limitations.html#boost_dll.limitations.multithread" title="Thread safe library loading (Fails on MacOS, iOS and some other)">Thread safe library
+      loading (Fails on MacOS, iOS and some other)</a>
+</h3></div></div></div>
+<p>
+        On some platforms <code class="computeroutput"><span class="identifier">dlopen</span></code>,<code class="computeroutput"><span class="identifier">dlclose</span></code> and some other functions assume
+        that they won't be called concurrently.
+      </p>
+<p>
+        Platforms that certaly have that issue are MacOS, iOS.
+      </p>
+<p>
+        Platforms that certaly do not have such issue are Windows, Linux+glibc, Android,
+        QNX.
+      </p>
+<p>
+        Other platforms are under question. If you're using one of the platforms
+        that are not listed (for example Linux+busybox), you may run the <code class="computeroutput"><span class="identifier">shared_library_concurrent_load_test</span></code> test
+        to detect the issue:
+</p>
+<pre class="programlisting"><span class="identifier">cd</span> <span class="identifier">boost_folder</span><span class="special">/</span><span class="identifier">libs</span><span class="special">/</span><span class="identifier">dll</span><span class="special">/</span><span class="identifier">test</span>
+<span class="special">../../../</span><span class="identifier">b2</span> <span class="special">-</span><span class="identifier">a</span> <span class="identifier">shared_library_concurrent_load_test</span>
+</pre>
+<p>
       </p>
 </div>
 </div>
