--- a/boost_dll/f_a_q_.html
+++ b/boost_dll/f_a_q_.html
@@ -37,7 +37,7 @@
                 instances loaded the same library. On other platforms it is not safe
                 to concurrently call any of the functions from Boost.DLL (even a
                 <code class="computeroutput"><span class="identifier">shared_library</span><span class="special">::</span><span class="identifier">location</span><span class="special">()</span></code>
-                call triggers a race condition). See <a class="link" href="limitations.html#boost_dll.limitations.multithread" title="Thread safe library loading (Fails on MacOS, iOS and some other)">Limitations,
+                call triggers a race condition). See <a class="link" href="limitations.html#boost_dll.limitations.multithread" title="Thread safe library loading (Fails on FreeBSD, MacOS, iOS and some other)">Limitations,
                 Thread safe library loading</a>.
               </li></ul></div>
         </li></ul></div>
