--- a/BOOST_DLL_SECTION.html
+++ b/BOOST_DLL_SECTION.html
@@ -33,7 +33,7 @@
 
 </span>BOOST_DLL_SECTION(SectionName, Permissions)</pre></div>
 <div class="refsect1">
-<a name="idp80659552"></a><h2>Description</h2>
+<a name="idm46120132020752"></a><h2>Description</h2>
 <p>
 </p>
 <div class="variablelist"><table border="0">
