--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <dt><span class="section"><a href="boost_dll/limitations.html#boost_dll.limitations.user_defined_section_names__fails_on_sunos___oracle_solaris_studio_compilers_">User
       defined section names (Fails on SunOS + Oracle Solaris Studio Compilers)</a></span></dt>
 <dt><span class="section"><a href="boost_dll/limitations.html#boost_dll.limitations.multithread">Thread safe library
-      loading (Fails on MacOS, iOS and some other)</a></span></dt>
+      loading (Fails on FreeBSD, MacOS, iOS and some other)</a></span></dt>
 </dl></dd>
 <dt><span class="section"><a href="boost_dll/f_a_q_.html">F.A.Q.</a></span></dt>
 <dt><span class="section"><a href="boost_dll/design_rationale.html">Design Rationale</a></span></dt>
@@ -132,7 +132,7 @@
 </div>
 </div>
 <table xmlns:rev="http://www.cs.rpi.edu/~gregod/boost/tools/doc/revision" width="100%"><tr>
-<td align="left"><p><small>Last revised: December 10, 2015 at 18:55:34 GMT</small></p></td>
+<td align="left"><p><small>Last revised: December 22, 2015 at 18:13:26 GMT</small></p></td>
 <td align="right"><div class="copyright-footer"></div></td>
 </tr></table>
 <hr>
