--- a/boost_dll/revision_history.html
+++ b/boost_dll/revision_history.html
@@ -46,7 +46,7 @@
           Dropped dependency to 'boost::string_ref'
         </li>
 <li class="listitem">
-          Multiple MacOS fixes, library now works on MacOS
+          Multiple MacOS and Android fixes
         </li>
 <li class="listitem">
           Performance and memory optimizations for <code class="computeroutput"><span class="identifier">import</span><span class="special">*</span></code> functions
@@ -59,6 +59,12 @@
         </li>
 <li class="listitem">
           Dropped support for useless Windows specific <code class="computeroutput"><span class="identifier">load_library_as_</span><span class="special">*</span></code> flags
+        </li>
+<li class="listitem">
+          Improved error reporting for failed library loads
+        </li>
+<li class="listitem">
+          Implemented a copy constructor and assignment operator for <code class="computeroutput"><span class="identifier">shared_library</span></code>
         </li>
 </ul></div>
 <h6>
